Вёрстка 2 и 3 блока для display

--- a/prepros.config
+++ b/prepros.config
@@ -886,6 +886,12 @@
         }
       },
       {
+        "file": "components/page.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
         "file": "index.pug",
         "config": {
           "compileImported": true
